# aivoa_task

backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/agents/interact_agent/: graph.py  nodes.py  runner.py  schemas.py  state.py  tools.py
backend/app/api/v1/routers/: interaction.py
backend/app/schemas/: user_input.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/app/: hooks.ts  store.ts
frontend/src/components/: AIChatSidebar.tsx  InteractionDetails.tsx
frontend/src/features/interactionDetails/: InteractionDetails.tsx  interactionDetailsSlice.ts
frontend/src/features/taskModal/: taskListModal.tsx  taskModal.tsx  taskModalSlice.ts  taskSlice.ts
