[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.13",
    "langgraph>=1.1.6",
    "uvicorn>=0.44.0",
]
